Fixes teeny display bug for uncollapsed menu on small screens.

--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ div.filters {
 
 #filters {
   overflow: hidden;
-  max-height: 70em;
+  max-height: 100em;
   transition: all 0.5s; }
 
 #filters.collapsed {
