--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -112,7 +112,7 @@ div.filters {
 
 #filters {
 	overflow: hidden;
-	max-height: 70em;
+	max-height: 100em;
 	transition: all 0.5s;
 }
 
